# rest.js

./: .gitignore  .npmignore  Cargo.toml  README.md  babel.config.js  gulpfile.js  jsdoc.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: deploy.yml  test.yml
__mocks__/: node-fetch.ts
master/: Bucket.html  Bucket.js.html  globals.html  index.html
master/classes/: _src_mutexes_local_.localmutex.html  _src_mutexes_ratelimitmutex_.ratelimitmutex.html  _src_mutexes_redis_.redismutex.html  _src_structures_bucket_.bucket.html  _src_structures_httperror_.httperror.html  _src_structures_rest_.rest.html
master/enums/: _src_structures_httperror_.internalerror.html  _src_structures_rest_.tokentype.html  _src_types_events_.events.html  _src_types_retry_.retryreason.html
master/interfaces/: _src_mutexes_local_.localratelimit.html  _src_mutexes_ratelimitmutex_.ratelimit.html  _src_mutexes_redis_._ioredis_.pipeline.html  _src_mutexes_redis_._ioredis_.redis.html  _src_structures_rest_.options.html  _src_types_request_.file.html  _src_types_request_.request.html  _src_types_retry_.retry.html
master/modules/: _package_.html  _src___mocks___node_fetch_.html  _src___mocks___util_.html  _src_index_.html  _src_index_test_.html  _src_mutexes_local_.html  (+12 more)
native/: Cargo.toml
scripts/: gettimeout.lua
src/: Query.ts  Request.ts  Rest.ts  adapter.ts  index.test.ts  index.ts  instance.ts  util.ts
test/: index.js  index.ts  multi_process.js  multi_process.ts
v0.7.0/: globals.html
v0.7.1/: globals.html
v0.8.0/: globals.html  index.html
(+101 files in other folders)
